tests/NormalTests/paczka1/fuzzy1/17940547.err
Error in line 6: GNxGsqbR6uc S723 78,3
Error in line 16: auI2yciGv S216 11,9
Error in line 27: odGpW A825 80,v
Error in line 7: 8RhtR A825 14,9
Error in line 36: S723 A420 57,1
Error in line 39: GNxGsqbR6uc A420 -1,2
